Fix layout issues

--- a/src/components/services.module.scss
+++ b/src/components/services.module.scss
@@ -59,7 +59,7 @@
 
     @media only screen and (max-width: 968px) {
         row-gap: var(--general-padding);
-        grid-template-rows: auto auto auto 250px auto;
+        grid-template-rows: auto auto auto auto auto;
         grid-template-areas:
             "title "
             "time "
@@ -115,26 +115,8 @@
     }
 }
 
-.onlineOnlyBadge {
-    grid-area: type;
-    //background-color: #C0544A;
-    color: #C0544A;
-    text-transform: uppercase;
-    font-weight: 400;
-    // color: var(--light-colour);
-    display:inline-block;
-    padding-left: 5px;
-    //padding-right: 5px;
-    border-radius: 3px;
-    align-self: end;
-    justify-self: right;
-}
-
 .photo {
     grid-area: image;
-    height: 300px;
-    background-size: cover; /* <-- background size */
-    background-position: center; /* <-- background position */
 
     @media only screen and (max-width: 968px) {
         margin-top: 10px;
